<?xml version="1.0"?>
<package format="2">
  <version>0.0.0</version>
  <name>t3_pcl</name>
  <description>t3_pcl</description>
  <maintainer email="team3@todo.todo">team3</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
    <build_depend>laser_geometry</build_depend>
  <build_export_depend>pcl</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

  <export></export>
</package>
